--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,14 @@
   <body>
     <header>
       <nav class="nav-menu">
-        <a href="/" class="logo">WebStudio</a>
+        <a href="/" class="logo"
+          >Web<span class="logo-half-header">Studio</span></a
+        >
         <ul class="nav-menu-list">
           <li class="nav-menu-list-item">
             <a href="./index.html" class="nav-menu-link">Студия</a>
           </li>
-          <li class="nav-menu-list-item">
+          <li class="nav-menu-list-item current">
             <a href="./portfolio.html" class="nav-menu-link">Портфолио</a>
           </li>
           <li class="nav-menu-list-item">
@@ -29,16 +31,14 @@
           </li>
         </ul>
       </nav>
-      <ul class="header-contacts">
-        <li class="header-contacts-item">
-          <a href="mailto:info@devstudio.com" class="header-contacts-link"
+      <ul class="contacts">
+        <li class="contacts-item">
+          <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-contacts-item">
-          <a href="tel:+380961111111" class="header-contacts-link"
-            >+38 096 111 11 11</a
-          >
+        <li class="contacts-item">
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -47,7 +47,7 @@
         <h1 class="hide">Портфолио</h1>
         <h2 class="hide">Фильтр</h2>
         <ul class="filter-buttons">
-          <li class="filter-button-item">
+          <li class="filter-button-item current">
             <button type="button" class="filter-button">Все</button>
           </li>
           <li class="filter-button-item">
@@ -70,6 +70,7 @@
                 src="./images/portfolio/pf1.jpg"
                 alt="Сайт на экране ноутбука"
                 class="portfolio-card-img"
+                width="370"
               />
               <h3 class="portfolio-card-title">Технокряк</h3>
               <p class="portfolio-card-description">Веб-сайт</p>
@@ -81,9 +82,12 @@
                 src="./images/portfolio/pf2.jpg"
                 alt="Яркий постер с баскетболистами"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Постер New Orleans vs Golden Star</h3>
-              <p>Дизайн</p>
+              <h3 class="portfolio-card-title">
+                Постер New Orleans vs Golden Star
+              </h3>
+              <p class="portfolio-card-description">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -92,9 +96,10 @@
                 src="./images/portfolio/pf3.jpg"
                 alt="Логотип рыбного ресторана"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Ресторан Seafood</h3>
-              <p>Приложение</p>
+              <h3 class="portfolio-card-title">Ресторан Seafood</h3>
+              <p class="portfolio-card-description">Приложение</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -103,9 +108,10 @@
                 src="./images/portfolio/pf4.jpg"
                 alt="Наушники"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Проект Prime</h3>
-              <p>Маркетинг</p>
+              <h3 class="portfolio-card-title">Проект Prime</h3>
+              <p class="portfolio-card-description">Маркетинг</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -114,9 +120,10 @@
                 src="./images/portfolio/pf5.jpg"
                 alt="Картонные коробки разных размеров"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Проект Boxes</h3>
-              <p>Приложение</p>
+              <h3 class="portfolio-card-title">Проект Boxes</h3>
+              <p class="portfolio-card-description">Приложение</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -125,9 +132,10 @@
                 src="./images/portfolio/pf6.jpg"
                 alt="Сайт на экране монитора"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Inspiration has no Borders</h3>
-              <p>Веб-сайт</p>
+              <h3 class="portfolio-card-title">Inspiration has no Borders</h3>
+              <p class="portfolio-card-description">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -136,9 +144,10 @@
                 src="./images/portfolio/pf7.jpg"
                 alt="Журнал со статьей и фотографиями"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Издание Limited Edition</h3>
-              <p>Дизайн</p>
+              <h3 class="portfolio-card-title">Издание Limited Edition</h3>
+              <p class="portfolio-card-description">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -147,9 +156,10 @@
                 src="./images/portfolio/pf8.jpg"
                 alt="Ярлык с веревочкой"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Проект LAB</h3>
-              <p>Маркетинг</p>
+              <h3 class="portfolio-card-title">Проект LAB</h3>
+              <p class="portfolio-card-description">Маркетинг</p>
             </a>
           </li>
           <li class="portfolio-card">
@@ -158,13 +168,34 @@
                 src="./images/portfolio/pf9.jpg"
                 alt="Пальцы на клавиатуре ноутбука"
                 class="portfolio-card-img"
+                width="370"
               />
-              <h3>Growing Business</h3>
-              <p>Приложение</p>
+              <h3 class="portfolio-card-title">Growing Business</h3>
+              <p class="portfolio-card-description">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
+    <footer class="site-footer">
+      <a href="/" class="logo"
+        >Web<span class="logo-half-footer">Studio</span></a
+      >
+      <address>
+        <ul>
+          <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="contacts-item">
+            <a href="mailto:info@example.com" class="contact-link"
+              >info@example.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+380961111111" class="contact-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
