добавляет классы и стили к ним

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
           >Web<span class="logo-half-header">Studio</span></a
         >
         <ul class="nav-menu-list">
-          <li class="nav-menu-list-item">
+          <li class="nav-menu-item">
             <a href="./index.html" class="nav-menu-link">Студия</a>
           </li>
-          <li class="nav-menu-list-item current">
+          <li class="nav-menu-item current">
             <a href="./portfolio.html" class="nav-menu-link">Портфолио</a>
           </li>
-          <li class="nav-menu-list-item">
+          <li class="nav-menu-item">
             <a href="#" class="nav-menu-link">Контакты</a>
           </li>
         </ul>
