--- a/index.html
+++ b/index.html
@@ -32,127 +32,133 @@
           </li>
         </ul>
       </nav>
-      <ul class="header-contacts">
+      <ul class="contacts">
         <li class="header-contacts-item">
-          <a href="mailto:info@devstudio.com" class="header-contact-link"
+          <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-contacts-item">
-          <a href="tel:+380961111111" class="header-contact-link"
-            >+38 096 111 11 11</a
-          >
+        <li class="contacts-item">
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="promo">
+        <h1 class="promo-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="promo-button">Заказать услугу</button>
       </section>
-      <section>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+      <section class="about-us">
+        <h2 class="section-title hide">О нас</h2>
+        <ul class="about-us-list">
+          <li class="about-us-item">
+            <h3 class="about-us-title">Внимание к деталям</h3>
+            <p class="about-us-description">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="about-us-item">
+            <h3 class="about-us-title">Пунктуальность</h3>
+            <p class="about-us-description">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="about-us-item">
+            <h3 class="about-us-title">Планирование</h3>
+            <p class="about-us-description">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="about-us-item">
+            <h3 class="about-us-title">Современные технологии</h3>
+            <p class="about-us-description">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="what-we-do">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="what-we-do-list">
+          <li class="what-we-do-item">
             <img
               src="./images/index/box1.jpg"
               alt="Разработка сайтов."
               width="370"
               height="294"
+              class="what-we-do-img"
             />
           </li>
-          <li>
+          <li class="what-we-do-item">
             <img
               src="./images/index/box2.jpg"
               alt="Разработка мобильных приложений."
               width="370"
               height="294"
+              class="what-we-do-img"
             />
           </li>
-          <li>
+          <li class="what-we-do-item">
             <img
               src="./images/index/box3.jpg"
               alt="Графический дизайн."
               width="370"
               height="294"
+              class="what-we-do-img"
             />
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="our-team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="our-team-list">
+          <li class="our-team-card">
             <img
               src="./images/index/teamcard1.jpg"
               alt="Участник команды 1"
               width="270"
               height="260"
+              class="our-team-card-img"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="our-team-card-title">Игорь Демьяненко</h3>
+            <p class="our-team-card-description">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-card">
             <img
               src="./images/index/teamcard2.jpg"
               alt="Участник команды 2"
               width="270"
               height="260"
+              class="our-team-card-img"
             />
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="our-team-card-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-card">
             <img
               src="./images/index/teamcard3.jpg"
               alt="Участник команды 3"
               width="270"
               height="260"
+              class="our-team-card-img"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="our-team-card-title">Николай Тарасов</h3>
+            <p class="our-team-card-description">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-card">
             <img
               src="./images/index/teamcard4.jpg"
               alt="Участник команды 4"
               width="270"
               height="260"
+              class="our-team-card-img"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="our-team-card-title">Михаил Ермаков</h3>
+            <p class="our-team-card-description">UI Designer</p>
           </li>
         </ul>
       </section>
