--- a/portfolio.html
+++ b/portfolio.html
@@ -181,9 +181,9 @@
       <a href="/" class="logo"
         >Web<span class="logo-half-footer">Studio</span></a
       >
-      <address>
+      <address class="footer-contacts">
         <ul>
-          <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="contact-address">г. Киев, пр-т Леси Украинки, 26</li>
           <li class="contacts-item">
             <a href="mailto:info@example.com" class="contact-link"
               >info@example.com</a
