Добавлен отсутствующий класс у заголовка

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               height="260"
               class="our-team-card-img"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="our-team-card-title">Ольга Репина</h3>
             <p class="our-team-card-description">Frontend Developer</p>
           </li>
           <li class="our-team-card">
