--- a/portfolio.html
+++ b/portfolio.html
@@ -185,12 +185,12 @@
         <ul>
           <li class="contact-address">г. Киев, пр-т Леси Украинки, 26</li>
           <li class="contacts-item">
-            <a href="mailto:info@example.com" class="contact-link"
+            <a href="mailto:info@example.com" class="footer-contact-link"
               >info@example.com</a
             >
           </li>
           <li class="contacts-item">
-            <a href="tel:+380961111111" class="contact-link"
+            <a href="tel:+380961111111" class="footer-contact-link"
               >+38 096 111 11 11</a
             >
           </li>
